--- a/codewars/index.html
+++ b/codewars/index.html
@@ -7,11 +7,11 @@
     <title>Document</title>
   </head>
   <body>
-    <!-- <script type="module" src="./task1.js"></script> -->
-    <!-- <script type="module" src="./task2.js"></script> -->
-    <!-- <script type="module" src="./task3.js"></script> -->
-    <!-- <script type="module" src="./task4.js"></script> -->
-    <!-- <script type="module" src="./task5.js"></script> -->
+    <!-- <script type="module" src="./Counting Duplicates.js"></script> -->
+    <!-- <script type="module" src="./Find the odd int.js"></script> -->
+    <!-- <script type="module" src="./Categorize New Member.js"></script> -->
+    <!-- <script type="module" src="./Equal Sides Of An Array.js"></script> -->
+    <script type="module" src="./task5.js"></script>
     <!-- <script type="module" src="./task6.js"></script> -->
     <!-- <script type="module" src="./task7.js"></script> -->
     <!-- <script type="module" src="./task8.js"></script> -->
@@ -38,6 +38,10 @@
     <!-- <script type="module" src="./task29.js"></script> -->
     <!-- <script type="module" src="./task30.js"></script> -->
     <!-- <script type="module" src="./task31.js"></script> -->
-    <script type="module" src="./task32.js"></script>
+    <!-- <script type="module" src="./task32.js"></script> -->
+    <!-- <script type="module" src="./task33.js"></script> -->
+    <!-- <script type="module" src="./task34.js"></script> -->
+    <!-- <script type="module" src="./task35.js"></script> -->
+    <!-- <script type="module" src="./task36.js"></script> -->
   </body>
 </html>
