--- a/mod1/index.html
+++ b/mod1/index.html
@@ -10,7 +10,7 @@
     <!-- <script type="module" src="./task1.js"></script> -->
     <!-- <script type="module" src="./task2.js"></script> -->
     <!-- <script type="module" src="./task3.js"></script> -->
-    <!-- <script type="module" src="./ttask4.js"></script> -->
+    <!-- <script type="module" src="./task4.js"></script> -->
     <!-- <script type="module" src="./task5.js"></script> -->
     <!-- <script type="module" src="./task6.js"></script> -->
     <!-- <script type="module" src="./task7.js"></script> -->
