--- a/codewars/index.html
+++ b/codewars/index.html
@@ -11,11 +11,11 @@
     <!-- <script type="module" src="./Find the odd int.js"></script> -->
     <!-- <script type="module" src="./Categorize New Member.js"></script> -->
     <!-- <script type="module" src="./Equal Sides Of An Array.js"></script> -->
-    <script type="module" src="./task5.js"></script>
+    <!-- <script type="module" src="./Split Strings.js"></script> -->
     <!-- <script type="module" src="./task6.js"></script> -->
     <!-- <script type="module" src="./task7.js"></script> -->
-    <!-- <script type="module" src="./task8.js"></script> -->
-    <!-- <script type="module" src="./task9.js"></script> -->
+    <script type="module" src="./task8.js"></script>
+    <script type="module" src="./task9.js"></script>
     <!-- <script type="module" src="./task10.js"></script> -->
     <!-- <script type="module" src="./task11.js"></script> -->
     <!-- <script type="module" src="./task12.js"></script> -->
